Fixed formatting issue with BodyContent producing a whitespace margin on the right side of the page,  and Navbar doing the same when the user scrolled down the page and the Navbar assumed it's fixed position at the top of the whitespace by altering CSS for the body in the BodyContent.css file.

--- a/dmixon-business/src/styles/BodyContent.css
+++ b/dmixon-business/src/styles/BodyContent.css
@@ -3,4 +3,12 @@
     color: rgb(30, 68, 30);
     display: flex;
     height: 100%;
+    width: 100%;
+}
+
+
+body {
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden; /* Prevent horizontal scroll */
 }
